# D-FINE-seg

./: .gitignore  CHANGELOG.md  Makefile  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  config.yaml  config_.yaml  main.py  pyproject.toml  requirements.txt
demo/: demo.py
output/models/visdrone_det_l_mps_2026-04-18/: config.yaml  train_log.txt
src/d_fine/: configs.py  dfine.py  utils.py
src/d_fine/arch/: dfine_decoder.py
src/dl/: bench.py  dataset.py  export.py  infer.py  train.py  utils.py
src/infer/: coreml_model.py  litert_model.py  onnx_model.py  ov_model.py  torch_model.py  trt_model.py
