[project]
name = "d-fine-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations==2.0.8",
    "coremltools==9.0",
    "difpy==4.2.1",
    "faster-coco-eval==1.6.5",
    "gradio==6.8.0",
    "hydra-core==1.3.2",
    "litert-torch==0.8.0",
    "loguru==0.7.2",
    "matplotlib==3.10.3",
    "numpy==2.1.1",
    "omegaconf==2.3.0",
    "onnx==1.21.0",
    "onnxconverter-common==1.16.0",
    "onnxruntime==1.21.1 ; (platform_machine != 'x86_64' and sys_platform == 'linux') or (platform_machine != 'AMD64' and sys_platform == 'win32') or sys_platform == 'darwin'",
    "onnxruntime-gpu==1.21.1 ; (platform_machine == 'x86_64' and sys_platform == 'linux') or (platform_machine == 'AMD64' and sys_platform == 'win32')",
    "onnxscript==0.6.2",
    "onnxsim==0.6.2",
    "opencv-python==4.10.0.84",
    "opencv-python-headless==4.10.0.84",
    "openvino==2025.2.0",
    "pandas==2.2.3",
    "pillow==12.2.0",
    "pillow-heif==1.3.0",
    "protobuf==6.33.5",
    "pycocotools==2.0.8",
    "pyyaml==6.0.2",
    "scikit-learn==1.7.0",
    "scipy==1.15.1",
    "tabulate==0.9.0",
    "tensorrt-cu12-bindings==10.10.0.31 ; (platform_machine == 'aarch64' and sys_platform == 'linux') or (platform_machine == 'x86_64' and sys_platform == 'linux') or (platform_machine == 'AMD64' and sys_platform == 'win32')",
    "tensorrt-cu12-libs==10.10.0.31 ; (platform_machine == 'aarch64' and sys_platform == 'linux') or (platform_machine == 'x86_64' and sys_platform == 'linux') or (platform_machine == 'AMD64' and sys_platform == 'win32')",
    "torch==2.9.0",
    "torchmetrics==1.7.4",
    "torchvision==0.24.0",
    "tqdm==4.66.5",
    "wandb==0.21.0",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
